force-app/main/default/objects/File_object_task__c/File_object_task__c.object-meta.xml
<CustomObject>
    <label>File object task</label>
    <nameField>
        <label>File object task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File object tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>