force-app/main/default/objects/File_object_task__c/fields/Appointed_to__c.field-meta.xml
<CustomField>
    <fullName>Appointed_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointed to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_object_tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>