force-app/main/default/objects/File_object_task__c/fields/Business_Central_id__c.field-meta.xml
<CustomField>
    <fullName>Business_Central_id__c</fullName>
    <externalId>true</externalId>
    <label>Business Central id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>