force-app/main/default/objects/File_object_task__c/fields/Completed_on__c.field-meta.xml
<CustomField>
    <fullName>Completed_on__c</fullName>
    <description>Timestamp of task completion</description>
    <label>Completed on</label>
    <type>DateTime</type>
</CustomField>