force-app/main/default/objects/File_object_task__c/fields/Contracts_Id__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Id__c</fullName>
    <externalId>true</externalId>
    <label>Contracts Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>