force-app/main/default/objects/File_object_task__c/fields/Created_date__c.field-meta.xml
<CustomField>
    <fullName>Created_date__c</fullName>
    <formula>DATEVALUE(CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created date</label>
    <type>Date</type>
</CustomField>