force-app/main/default/objects/File_object_task__c/fields/Expired_on__c.field-meta.xml
<CustomField>
    <fullName>Expired_on__c</fullName>
    <label>Expired on</label>
    <type>Date</type>
</CustomField>