force-app/main/default/objects/File_object_task__c/fields/File_object_task__c.field-meta.xml
<CustomField>
    <fullName>File_object_task__c</fullName>
    <label>File object task</label>
    <length>123</length>
    <type>Text</type>
</CustomField>