force-app/main/default/objects/File_object_task__c/fields/IsMyFileObject__c.field-meta.xml
<CustomField>
    <fullName>IsMyFileObject__c</fullName>
    <formula>Professional_name__r.OwnerId == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMyFileObject</label>
    <type>Checkbox</type>
</CustomField>