force-app/main/default/objects/File_object_task__c/fields/New_tasknumber__c.field-meta.xml
<CustomField>
    <fullName>New_tasknumber__c</fullName>
    <label>New tasknumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>