force-app/main/default/objects/File_object_task__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <externalId>true</externalId>
    <label>Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>