force-app/main/default/objects/File_object_task__c/fields/Professional_name__c.field-meta.xml
<CustomField>
    <fullName>Professional_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professional name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>File object tasks</relationshipLabel>
    <relationshipName>File_object_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>