force-app/main/default/objects/File_object_task__c/fields/Reason_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_cancellation__c</fullName>
    <label>Reason cancellation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>