force-app/main/default/objects/File_object_task__c/fields/Related_to_placement__c.field-meta.xml
<CustomField>
    <fullName>Related_to_placement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related to placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>File object tasks</relationshipLabel>
    <relationshipName>File_object_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>