force-app/main/default/objects/File_object_task__c/fields/Removal_date__c.field-meta.xml
<CustomField>
    <fullName>Removal_date__c</fullName>
    <label>Removal date</label>
    <type>Date</type>
</CustomField>