force-app/main/default/objects/File_object_task__c/fields/Renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_date__c</fullName>
    <label>Renewal date</label>
    <type>DateTime</type>
</CustomField>