force-app/main/default/objects/File_object_task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Related_to_placement__c</columns>
    <columns>Professional_name__c</columns>
    <columns>Deadline_date__c</columns>
    <columns>Status_task__c</columns>
    <columns>Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>