force-app/main/default/objects/File_object_task__c/listViews/Mijn_dossier_items.listView-meta.xml
<ListView>
    <fullName>Mijn_dossier_items</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsMyFileObject__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mijn dossier items</label>
</ListView>